src/test/ui/parser/class-implements-bad-trait.stderr
error: expected one of `!` or `::`, found `cat`
  --> $DIR/class-implements-bad-trait.rs:2:7
   |
LL | class cat : nonexistent {
   |       ^^^ expected one of `!` or `::`

error: aborting due to previous error

